<resources>
    <string name="app_name">CS360_AppDevProposal_JamieJavis</string>

    <string name="title_name">InventoryApp</string>
    <string name="label_password">Password:</string>
    <string name="label_username">Username:</string>
    <string name="button_login">Login</string>
    <string name="button_create_account">Create Account</string>

    <string name="create_account">Create Account</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">Username</string>

    <string name="delete_data">Delete Data</string>
    <string name="refresh_data">Refresh Data</string>
    <string name="update_data">Update Data</string>
    <string name="add_data">Add Data</string>
    <string name="data_label">Data:</string>

    <string name="turn_on_notifications">Turn on Notifications to Alert when Inventory is Low?</string>
    <string name="deny">Deny</string>
    <string name="allow">Allow</string>
    <string name="enable_notifications_settings">To Enable Notifications Access Devices Settings</string>

</resources>