<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    android:padding="10dp"
    tools:context=".MainActivity2">


    <TextView
        android:id="@+id/dataLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/data_label"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/enterItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:hint="Item Name"
        android:layout_below="@+id/dataLabel"/>

    <EditText
        android:id="@+id/enterNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:hint="Item Quantity"
        android:layout_below="@+id/enterItem"/>


    <Button
        android:id="@+id/addDataButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enterNumber"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/add_data" />

    <Button
        android:id="@+id/editItemButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enterNumber"
        android:layout_toEndOf="@id/addDataButton"
        android:layout_marginTop="16dp"
        android:layout_marginStart="160dp"
        android:text="@string/update_data" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dataRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:layout_below="@+id/addDataButton"/>

    <Button
        android:id="@+id/updateList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/refresh_data"
        android:layout_margin="16dp"
        android:layout_below="@+id/dataRecyclerView" />

    <EditText
        android:id="@+id/itemID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginTop="20dp"
        android:hint="Item ID"
        android:layout_below="@+id/updateList"/>

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/delete_data"
        android:layout_below="@+id/itemID"/>

</RelativeLayout>

