<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".MainActivity3"
    android:theme="?android:attr/buttonBarStyle">


    <TextView
        android:id="@+id/notificationTextView"
        android:layout_width="341dp"
        android:layout_height="70dp"
        android:layout_marginTop="180dp"
        android:background="@color/white"
        android:text="@string/turn_on_notifications"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notificationTextView">

        <Button
            android:id="@+id/denyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/deny" />

        <Button
            android:id="@+id/allowButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allow"
            android:layout_marginStart="8dp" />
    </LinearLayout>


    <TextView
        android:id="@+id/notificationSettingsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_notifications_settings"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@android:color/black"
        android:visibility="gone"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonsLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

